[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Ilya Yaushkin <mexic2284@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '.git'

[tool.mypy]
# Запрещает объявлять функции без аннотации типов
disallow_untyped_defs = true
# предупреждает, если в качестве возвращаемого типа было указано Any
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119